# snake

./: .gitignore  CMakeLists.txt  README.md  fps.cpp  fps.h  headers.h  main.cpp  snake.cpp  snake.h  texture.cpp  texture.h
resources/fonts/: nokiafc22.h
